# Notthack

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
anchor/: .gitignore  Anchor.toml  Cargo.toml
anchor/programs/mealtrust_state/: Cargo.toml
anchor/programs/nourishchain_state/: Cargo.toml
anchor/programs/nourishchain_state/src/: lib.rs
docs/: BGA Track 1（NottsHack）要件調査と領域別の課題分析レポート.md  BGA_Teack.md  BGA_Team_Chat_Share.md  BGA_Team_Idea_Rationale_With_Sources.md
mealtrust_app/: README.md  SETUP.md  pubspec.yaml
mealtrust_app/android/app/: build.gradle.kts
mealtrust_app/ios/Runner/: Info.plist
mealtrust_app/ios/Runner.xcodeproj/: project.pbxproj
mealtrust_app/lib/: main.dart
mealtrust_app/lib/models/: voucher.dart
mealtrust_app/lib/screens/: auditor_screen.dart  home_screen.dart  issuer_screen.dart  (+3 more)
mealtrust_app/linux/: CMakeLists.txt
mealtrust_app/test/: widget_test.dart
mealtrust_app/web/: index.html  manifest.json
mealtrust_app/windows/: CMakeLists.txt
nourishchain_app/: README.md  SETUP.md  pubspec.yaml
nourishchain_app/linux/: CMakeLists.txt
nourishchain_app/web/: index.html  manifest.json
nourishchain_app/windows/: CMakeLists.txt
scripts/: acceptance-check.js
src/: server.js
src/data/: runtime-state.json
src/lib/: auth.js  solana-ledger.js  state.js
workspace/: manager_execution_summary.md  manager_prompt_diff.md  next_manager_prompt.md  phase8_demo_operator_script.md  phase8_qna_bank.md  phase9_pitch_script.md  phase9_slide_outline.md  repo_state_audit.md  run_log.md  working_log_2026-04-09.md
(+31 files in other folders)
