[package]
name = "nourishchain_state"
version = "0.1.0"
description = "Minimal voucher checkpoint program for NourishChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nourishchain_state"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

